



########### install files ###############

install( FILES cup.png grass.png puddle.png sand.png  DESTINATION  ${DATA_INSTALL_DIR}/kolf/pics/ )




#original Makefile.am contents follow:

#picdir = $(kde_datadir)/kolf/pics/
#pic_DATA = cup.png grass.png puddle.png sand.png
#
#EXTRA_DIST=$(pic_DATA)
