



########### install files ###############

install( FILES wall.wav puddle.wav holeinone.wav holed.wav blackhole.wav blackholeputin.wav blackholeeject.wav hit.wav  DESTINATION  ${DATA_INSTALL_DIR}/kolf/sounds )




#original Makefile.am contents follow:

#sounddir = $(kde_datadir)/kolf/sounds
#sound_DATA = wall.wav puddle.wav holeinone.wav holed.wav blackhole.wav blackholeputin.wav blackholeeject.wav hit.wav
#
#EXTRA_DIST=$(sound_DATA)
